dark mode fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,21 +6,15 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
 :root {
-  --background: #ffffff;
-  --foreground: #000000;
+ --background: #000000;
+  --foreground: #ededed;
+  --font-lexend: "Lexend", sans-serif;
+    --font-open-sans: "Open Sans", sans-serif;
+    --font-space-grotesk: "Space Grotesk", sans-serif;
+    --font-outfit: "Outfit", sans-serif;
+    --font-dm-sans: "DM Sans", sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #000000;
-    --foreground: #ededed;
-    --font-dm-sans: "DM Sans", sans-serif;
-  --font-lexend: "Lexend", sans-serif;
-  --font-open-sans: "Open Sans", sans-serif;
-  --font-space-grotesk: "Space Grotesk", sans-serif;
-  --font-outfit: "Outfit", sans-serif;  
-}
-}
 
 body {
   color: var(--foreground);
